Added "blindfold" as a skin Trying to fix promotion

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "board_asset": "green",
-    "pieces_asset": "wood",
+    "pieces_asset": "neo_wood",
     "background_asset": "wood",
     "sounds_asset": "metal",
     "margin": 32,
