Trying to add a cross for promotion

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "selected_board_asset": "green",
     "selected_piece_asset": "neo_wood",
     "selected_background_asset": "wood",
-    "selected_sound_asset": "metal",
+    "selected_sound_asset": "newspaper",
     "margin": 32,
     "taskbar_height": 48,
     "rows": 8,
