Will modify the class infrastructure and config Config is now a dictionnary Draw methods will be moved

--- a/config.json
+++ b/config.json
@@ -6,7 +6,5 @@
     "margin": 32,
     "taskbar_height": 48,
     "rows": 8,
-    "columns": 8,
-    "width": "",
-    "height": ""
+    "columns": 8
 }
