Fixed an oversight

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "selected_board_asset": "green",
-    "selected_piece_asset": "neo_wood",
+    "selected_piece_asset": "lichess",
     "selected_background_asset": "wood",
     "selected_sound_asset": "newspaper",
     "margin": 32,
