--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "selected_board_asset": "green",
-    "selected_piece_asset": "chesscom",
+    "selected_piece_asset": "neo_wood",
     "selected_background_asset": "wood",
     "selected_sound_asset": "default",
     "margin": 32,
