Renamed backgrounds to background

--- a/config.cfg
+++ b/config.cfg
@@ -1,10 +1,16 @@
-{
-    "selected_board_asset": "green",
-    "selected_piece_asset": "neo_wood",
-    "selected_background_asset": "wood",
-    "selected_sound_asset": "default",
-    "margin": 32,
-    "taskbar_height": 48,
-    "rows": 8,
-    "columns": 8
-}
+[GENERAL]
+height = 0
+fps = 60
+taskbar_height = 48
+margin = 32
+
+[ASSETS]
+piece = chessnut
+board = brown
+board_8x8 = wood
+background = metal
+sound = newspaper
+
+[BOARD]
+rows = 8
+columns = 8
