Added some rules that will or not will be here

--- a/src/config.cfg
+++ b/src/config.cfg
@@ -3,6 +3,7 @@ height = 0
 fps = 60
 taskbar_height = 48
 margin = 32
+volume = 0.2
 
 [ASSETS]
 piece = chessnut
@@ -16,3 +17,84 @@ rows = 8
 columns = 8
 
 [RULES]
+puissance_4_pawns = False
+mutation_chess = False
+king_of_the_hill = False
++3_checks = False
+giveaway = False
+chess960 = False
+random_position = False
+random_promotion = False
+no_promotion = False
+only_queen_promotion = False
+only_rook_promotion = False
+only_bishop_promotion = False
+only_knight_promotion = False
+no_en_passant = False
+en_passant_forced = False
+swapper = False # n %
+freezer = False # n %
+any_capture = False
+barbarians = False # n % and types of pieces
+torpedo = False
+crawl = False
+overpass = False
+retreat = False
+leap = False
+sideways = False
+upside_down = False
+regal_sweep = False
+frozen_wonderland = False
+reverse_strike = False
+inward_strike = False
+allow_passing = False
+double_play = False
+bare_piece = False
+duck_chess = False
+opposite_castling = False
+no_big_castle = False
+no_small_castle = False
+no_castling = False
+ignore_check = False
+teleporter_madness = False
+atomic = False
+fatal_capture = False
+blindfold = False
+ghostboard = False
+forward_march = False
+colorblind = False
+crazyhouse = False
+racing_kings = False
+4_player_chess = False
+mystery_chess = False
+royal_quota = False
+corregal = False
+decimation = False
+knightmate = False
+extinction = False
+pawns_only = False
+cylinder = False
+bouncing = False
+infinite_bouncing = False
+berolina = False
+absorption = False
+cannibal = False
+fog_of_war = False
+chess18 = False
+shuffle_chess = False
+chess2880 = False
+reverse_backrank = False
+random_play_first = False
+black_play_first = False
+half_chaos = False
+random_asset = False
+asset_chaos = False
+thanos = False # n %
+mirror = False
+pawn_parade = False
+half_commitment = False
+unique_step = False
+instant_void = False # n moves
+random_walls = False # n %
+minefield = False # n %
+super_size = False # n
