Added new rules

--- a/src/config.cfg
+++ b/src/config.cfg
@@ -26,10 +26,7 @@ chess960 = False
 random_position = False
 random_promotion = False
 no_promotion = False
-only_queen_promotion = False
-only_rook_promotion = False
-only_bishop_promotion = False
-only_knight_promotion = False
+only_piece_promotion = False # types of pieces
 no_en_passant = False
 en_passant_forced = False
 swapper = False # n %
@@ -98,3 +95,19 @@ instant_void = False # n moves
 random_walls = False # n %
 minefield = False # n %
 super_size = False # n
+abstract = False
+accelerated = False
+active = False
+rotating_center = False # clockwise, anticlockwise or diagonal
+advance = False
+el_vaticano = False
+all-in = False
+all-mate = False
+almost = False
+amazon = False
+annihilation = False
+anti-gravity = False
+anti-magnet = False
+anywhere = False
+archimedes = False
+alternating = False
