ça marche (à moitié)

--- a/config.cfg
+++ b/config.cfg
@@ -37,10 +37,10 @@ no_promotion = False
 only_piece_promotion = False # types of pieces
 no_en_passant = False
 en_passant_forced = False
-swapper = False # n %
-freezer = False # n %
+swapper = False # n pourcentage
+freezer = False # n pourcentage
 any_capture = False
-barbarians = False # n % and types of pieces
+barbarians = False # n pourcentage and types of pieces
 torpedo = False
 crawl = False
 overpass = False
@@ -94,14 +94,14 @@ black_play_first = False
 half_chaos = False
 random_asset = False
 asset_chaos = False
-thanos = False # n %
+thanos = False # n pourcentage
 mirror = False
 pawn_parade = False
 half_commitment = False
 unique_step = False
 instant_void = False # n moves
-random_walls = False # n %
-minefield = False # n %
+random_walls = False # n pourcentage
+minefield = False # n pourcentage
 super_size = False # n
 abstract = False
 accelerated = False
