Trying to make the game work

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,6 @@
 [GENERAL]
 height = 0
 fps = 60
-taskbar_height = 48
 margin = 32
 volume = 0.2
 
@@ -14,8 +13,7 @@ available_piece = ['alpha', 'anarcandy', 'caliente', 'california', 'cardinal', '
 
 [ASSETS]
 piece = chessnut
-board = brown
-board_8x8 = wood
+board = blue3
 background = metal
 sound = newspaper
 
