create_board() done Modifying function names We don't need calc_pos() Doing drawing functions

--- a/config.cfg
+++ b/config.cfg
@@ -9,7 +9,7 @@ sound_type = ["capture", "castle", "game-start", "game-end", "move-check", "move
 available_sound = ["beat", "default", "lolz", "marble", "metal", "nature", "newspaper", "silly", "space"]
 available_board = ["blue", "brown", "green", "ic", "newspaper", "purple", "blue-marble", "blue2", "blue3", "canvas2", "green-plastic", "grey", "horsey", "leather", "maple", "maple2", "ncf-board", "olive", "pink-pyramid", "purple-diag", "wood", "wood2", "wood3", "wood4"]
 available_background = ["standard", "game_room", "classic", "light", "wood", "glass", "tournament", "staunton", "newspaper", "tigers", "nature", "sky", "cosmos", "ocean", "metal", "gothic", "marble", "neon", "graffiti", "bubblegum", "lolz", "8_bit", "bases", "blues", "dash", "icy_sea", "walnut"]
-available_piece = ['alpha', 'anarcandy', 'caliente', 'california', 'cardinal', 'cburnett', 'celtic', 'chess7', 'chessnut', 'companion', 'disguised', 'dubrovny', 'fantasy', 'fresca', 'gioco', 'governor', 'horsey', 'icpieces', 'kiwen-suwi', 'kosal', 'leipzig', 'letter', 'libra', 'maestro', 'merida', 'mono', 'mpchess', 'pirouetti', 'pixel', 'reillycraig', 'riohacha', 'shapes', 'spatial', 'staunty', 'tatiana']
+available_piece = ['alpha', 'anarcandy', 'blindfold', 'caliente', 'california', 'cardinal', 'cburnett', 'celtic', 'chess7', 'chessnut', 'companion', 'disguised', 'dubrovny', 'fantasy', 'fresca', 'gioco', 'governor', 'horsey', 'icpieces', 'kiwen-suwi', 'kosal', 'leipzig', 'letter', 'libra', 'maestro', 'merida', 'mono', 'mpchess', 'pirouetti', 'pixel', 'reillycraig', 'riohacha', 'shapes', 'spatial', 'staunty', 'tatiana']
 
 [ASSETS]
 piece = chessnut
