Modified castling (maybe working)

--- a/config.cfg
+++ b/config.cfg
@@ -84,7 +84,7 @@ absorption = False
 cannibal = False
 fog_of_war = False
 chess18 = False
-shuffle_chess = False
+shuffle_chess = False # no castling
 chess2880 = False
 reverse_backrank = False
 random_play_first = False
