Fixed a bug with selected piece

--- a/config.cfg
+++ b/config.cfg
@@ -9,7 +9,7 @@ piece = chessnut
 board = blue3
 background = metal
 sound = newspaper
-flipped_assets = True
+flipped_assets = False
 
 [BOARD]
 rows = 8
