Fixed a bug in settings

--- a/config.cfg
+++ b/config.cfg
@@ -5,10 +5,10 @@ margin = 32
 volume = 0.2
 
 [ASSETS]
-piece = chessnut
-board = blue3
-background = metal
-sound = newspaper
+piece = anarcandy
+board = wood4
+background = wood
+sound = metal
 flipped_assets = False
 
 [BOARD]
