--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [GENERAL]
 height = 0
-fps = 60
+fps = 30
 margin = 32
 volume = 0.2
 
@@ -8,7 +8,7 @@ volume = 0.2
 piece = kosal
 board = wood4
 background = wood
-sound = metal
+sound = default
 flipped_assets = False
 
 [BOARD]
